@@ -1,3 +1,8 @@
+2016-08-01  Natalia Portillo  <claunia@claunia.com>
+
+	* AssemblyInfo.cs:
+	* DiscImageChef.Helpers.csproj: Bump to version 3.2.0
+
 2016-07-31  Natalia Portillo  <claunia@claunia.com>
 
 	* DateHandlers.cs: Added support for U.C.S.D. Pascal
